<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.0</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>dwe.holding.generic</groupId>
    <artifactId>applications-framework</artifactId>
    <version>0.0.7</version>
    <packaging>pom</packaging>
    <name>application-modules</name>
    <description>master pom for applications requiring different modules
    </description>
    <modules>
        <module>admin-module</module>
        <module>teammover-app</module>
        <module>supplyinventory-module</module>
        <module>cartracker-app</module>
        <module>customer-module</module>
        <module>shared-module</module>
        <module>vmas-app</module>
        <module>scorekeeper-app</module>
        <module>report-module</module>
        <module>salesconsult-module</module>
        <module>vmas-sse-app</module>
    </modules>
    <properties>
        <java.version>25</java.version>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <module.version>0.0.1-SNAPSHOT</module.version>
        <app.version>0.0.7</app.version>
    </properties>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter</artifactId>
                <version>4.0.2</version>
            </dependency>

            <dependency>
                <groupId>org.thymeleaf.extras</groupId>
                <artifactId>thymeleaf-extras-springsecurity6</artifactId>
                <version>3.1.3.RELEASE</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>

            <!-- test -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-devtools</artifactId>
                <version>4.0.2</version>
                <optional>true</optional>
            </dependency>
            <dependency>
                <groupId>io.github.openfeign.querydsl</groupId>
                <artifactId>querydsl-core</artifactId>
                <version>7.1</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>io.github.openfeign.querydsl</groupId>
                <artifactId>querydsl-apt</artifactId>
                <version>7.1</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>io.github.openfeign.querydsl</groupId>
                <artifactId>querydsl-jpa</artifactId>
                <version>7.1</version>
            </dependency>
            <!-- Jsoup for HTML to text conversion -->
            <dependency>
                <groupId>org.jsoup</groupId>
                <artifactId>jsoup</artifactId>
                <version>1.22.2</version>
            </dependency>
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>1.6.3</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
<!-- prod                    <jvmArguments>-Xmx2g -Xms1g</jvmArguments> -->
                    <mainClass>dwe.holding.VmasApplication</mainClass>
                </configuration>
                <executions>
                    <execution>
                        <id>repackage</id>
                        <configuration>
                            <classifier>exec</classifier>
                        </configuration>
                    </execution>
                </executions>
            </plugin>


            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <annotationProcessors>
                        <annotationProcessor>lombok.launch.AnnotationProcessorHider$AnnotationProcessor</annotationProcessor>
                        <annotationProcessor>com.querydsl.apt.jpa.JPAAnnotationProcessor</annotationProcessor>
                        <annotationProcessor>org.mapstruct.ap.MappingProcessor</annotationProcessor>
                    </annotationProcessors>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>io.github.openfeign.querydsl</groupId>
                            <artifactId>querydsl-apt</artifactId>
                            <!--                            <classifier>jakarta</classifier>-->
                            <version>7.1</version>
                        </path>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>1.6.3</version>
                        </path>
                        <!--                        <path>-->
                        <!--                            <groupId>javax.annotation</groupId>-->
                        <!--                            <artifactId>javax.annotation-api</artifactId>-->
                        <!--                            <version>1.3.1</version>-->
                        <!--                        </path>-->

                    </annotationProcessorPaths>
                    <!-- Recommended: Some IDE's might require this configuration to include generated sources for IDE usage -->
                    <!--                    <generatedTestSourcesDirectory>target/generated-test-sources</generatedTestSourcesDirectory>-->
                    <!--                    <generatedSourcesDirectory>target/generated-sources</generatedSourcesDirectory>-->
                    <!--                    <parameters>true</parameters>-->
                </configuration>
            </plugin>


            <!--            -->
            <!--            -->
            <!--            -->
            <!--            -->
            <!--            -->
            <!--            -->
            <!--            <plugin>-->
            <!--                <groupId>org.apache.maven.plugins</groupId>-->
            <!--                <artifactId>maven-compiler-plugin</artifactId>-->
            <!--                <configuration>-->
            <!--                    <annotationProcessorPaths>-->
            <!--                        &lt;!&ndash; Explicit opt-in required via annotationProcessors or-->
            <!--                            annotationProcessorPaths on Java 22+, see https://bugs.openjdk.org/browse/JDK-8306819 &ndash;&gt;-->
            <!--                        <annotationProcessorPath>-->
            <!--                            <groupId>io.github.openfeign.querydsl</groupId>-->
            <!--                            <artifactId>querydsl-apt</artifactId>-->
            <!--                            <classifier>jakarta</classifier>-->
            <!--                            <version>7.1</version>-->
            <!--                        </annotationProcessorPath>-->
            <!--                        <annotationProcessorPath>-->
            <!--                            <groupId>jakarta.persistence</groupId>-->
            <!--                            <artifactId>jakarta.persistence-api</artifactId>-->
            <!--                        </annotationProcessorPath>-->
            <!--                        <path>-->
            <!--                            <groupId>org.mapstruct</groupId>-->
            <!--                            <artifactId>mapstruct-processor</artifactId>-->
            <!--                            <version>1.6.3</version>-->
            <!--                        </path>-->
            <!--                        <path>-->
            <!--                            <groupId>org.projectlombok</groupId>-->
            <!--                            <artifactId>lombok-mapstruct-binding</artifactId>-->
            <!--                            <version>0.2.0</version>-->
            <!--                        </path>-->
            <!--                    </annotationProcessorPaths>-->
            <!--                    &lt;!&ndash; Recommended: Some IDE's might require this configuration to include generated sources for IDE usage &ndash;&gt;-->
            <!--                    <generatedTestSourcesDirectory>target/generated-test-sources</generatedTestSourcesDirectory>-->
            <!--                    <generatedSourcesDirectory>target/generated-sources</generatedSourcesDirectory>-->
            <!--                    <parameters>true</parameters>-->
            <!--                </configuration>-->
            <!--            </plugin>-->
        </plugins>
    </build>
</project>